<resources>
    <string name="app_name">MHStatistic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistic">Statistic</string>
    <string name="fold">Folder</string>
    <string name="notifications">Notifications</string>
    <string name="input_year_and_import_file">Input year and import file</string>
    <string name="select_date">Select Date</string>
    <string name="room">Room</string>
    <string name="_0">0</string>
    <string name="total_amount_of_electricity">Total Amount (kWh)</string>
    <string name="event">Event</string>
    <string name="total_electricity_bill">Total Fee (VND)</string>

    <string-array name="sort_options">
        <item>Sort by Name</item>
        <item>Sort by Date Added</item>
    </string-array>
</resources>